<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, FitLoggerActivity!</string>
    <string name="app_name">FitLogger</string>
    <string-array name="modules">
        	<item> Start a Workout</item>
        	<item> Create/Edit Workout</item>
        	<item> Goals</item>
        	<item> History</item>
        	<item> Analytics</item>
        	<item> Calendar </item>
        	<item> Tutorial </item>
    </string-array>

    <string name="workoutName">Workout Name</string>
    <string name="workoutType">Workout Type</string>
    <string-array name="workoutTypes">
        	<item>Strength</item>
        	<item>Cardio</item>
        	<item>Stretching</item>
    </string-array>
    <string name="workoutRepeats">Repeats:</string>
    <string-array name="workoutRepeatWeeks">
        	<item>Weekly</item>
        	<item>Bi-weekly</item>
        	<item>3 weeks</item>
        	<item>4 weeks</item>
    </string-array>
    
    <string name="exerciseName">Exercise Name</string>
    <string name="exerciseType">Exercise Type</string>
    <string-array name="exerciseCardioTypes">
        	<item>Cardio - Generic</item>
        	<item>Cardio - Run</item>
        	<item>Cardio - Swim</item>
        	<item>Cardio - Bike</item>
        	<item>Cardio - Ski</item>
        	<item>Cardio - Row/Paddle</item>
    </string-array>
    <string-array name="exerciseStrengthTypes">
        	<item>Strength - Generic</item>
        	<item>Strength - Abs</item>
        	<item>Strength - Back</item>
        	<item>Strength - Bicep</item>
        	<item>Strength - Chest</item>
        	<item>Strength - Legs</item>
        	<item>Strength - Shoulder</item>
        	<item>Strength - Tricep</item>
    </string-array>
    
    <string-array name="goalCardioTypes">
        	<item>Run</item>
        	<item>Swim</item>
        	<item>Bike</item>
        	<item>Ski</item>
        	<item>Row/Paddle</item>
        	<item>Exercise Specific</item>
    </string-array>
    
    <string name="exerciseCardio">Cardio</string>
    <string name="exerciseStrength">Strength</string>
    <string name="exerciseTime">Time</string>
    
    <string name="exerciseSubType">Exercise Sub-Type</string>
    <string-array name="exerciseCardioSubTypes">
       		<item>Countdown Timer</item>
       		<item>Countup Timer</item>
       		<item>Distance</item>
       		<item>Intervals</item>
    </string-array>
    <string-array name="exerciseStrengthSubTypes">
        	<item>Set-based</item>
       		<item>Countdown Timer</item>
       		<item>Countup Timer</item>
    </string-array>
    
    <string name="exerciseDistance">Distance</string>
    <string-array name="exerciseDistances">
       		<item>mile</item>
       		<item>Km.</item>
       		<item>m.</item>
       		<item>yd.</item>
    </string-array>
    
    <string name="exerciseCountdown">Timer Duration</string>
    <string name="timeType">Time Type</string>
    <string-array name="timeTypes">
       		<item>seconds</item>
       		<item>minutes</item>
       		<item>hours</item>
    </string-array>
    
    <string name="unit">Unit</string>
    <string-array name="units">
        	<item>seconds</item>
        	<item>minutes</item>
        	<item>hours</item>
        	<item>m.</item>
        	<item>yd.</item>
        	<item>mile</item>
        	<item>Km.</item>
    </string-array>
    
    <string name="exerciseIntervalName">Name</string>
    <string name="exerciseIntervalLength">Length</string>
    <string name="exerciseIntervals">Intervals</string>
    <string name="exerciseIntervalSets">Interval Sets</string>
    <string name="one">1</string>
    
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="completed">Completed</string>
    
    <string name="sets">Sets:</string>
    <string name="weight">Weight</string>
    <string-array name="weightTypes">
        <item>lb.</item>
        <item>kg.</item>
    </string-array>
    <string name="reps">Reps</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="setNumber">Number of Sets:</string>
    
    <string-array name="exerciseBank">
        <item>Bench Press</item>
    	<item>Incline Bench</item>
    	<item>Bicep Curl</item>
    	<item>Skull Crusher</item>
    </string-array>
    
    <string name="showCompleted">Show Completed</string>
    <string name="exGoalName">Goal Summary</string>
    <string name="exGoalNameHint">Ex: run a marathon</string>
    <string name="exGoalNameOrType">Exercise Name or Type</string>
    <string name="exGoalStarted">Started At:</string>
    <string name="exGoalCurrent">Current Best:</string>
    <string name="exGoalGoal">Goal:</string>
    <string name="cumulative">Cumulative</string>
    <string name="description">Description</string>
    
    <string name="bodyGoalCategory">Goal Category</string>
    <string name="bodyGoalCurrent">Current:</string>
    <string name="bodyGoalHint">Ex: Body Weight</string>
    <string name="bodyGoalInformation">Goal Information</string>
    <string name="bodyGoalStarted">Starting #</string>
    <string name="bodyGoalGoal">Goal #</string>
    <string-array name="bodyGoalUnits">
        <item>lb.</item>
        <item>in.</item>
        <item>Kg.</item>
        <item>cm.</item>
        <item>%</item>
    </string-array>
    
    <string name="customGoalHint">Ex: find a workout partner!</string>
    
    <string name="month">Month</string>
    <string name="threeMonths">Three Months</string>
    <string name="year">Year</string>
    
    <string name="weightOverTime">Weight Over Time</string>
    <string name="repSpecific">Rep Specific</string>
    <string name="generate">Generate</string>
    
    <string-array name="tutorial_modules">
       		<item> Exercises</item>
       		<item> Workouts</item>
        	<item> Start a Workout</item>
        	<item> Create/Edit Workout</item>
        	<item> Goals</item>
        	<item> History</item>
        	<item> Analytics</item>
        	<item> Calendar </item>
    </string-array>
    
    <color name="white">#FFFFFF</color>
</resources>
