<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svCreateExercise"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/llCreateExercise"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvCreateExerciseExerciseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exerciseName" />

        <EditText
            android:id="@+id/etCreateExerciseName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/exerciseName" >
        </EditText>

        <TextView
            android:id="@+id/tvCreateExerciseExerciseType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exerciseType" />

        <Spinner
            android:id="@+id/spnCreateExerciseType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/exerciseType" />

        <TextView
            android:id="@+id/tvCreateExerciseSubType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exerciseSubType" />

        <Spinner
            android:id="@+id/spnCreateExerciseSubType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/exerciseSubType" />

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/llCreateExerciseDistance"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >
            
            <EditText
	            android:id="@+id/etCreateExerciseDistance"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:hint="@string/exerciseDistance"
	            android:inputType="numberDecimal" >
        	</EditText>
        	
            <Spinner
	            android:id="@+id/spnCreateExerciseDistance"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:prompt="@string/exerciseDistance" />
            
        </LinearLayout>
        
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/llCreateExerciseCountdown"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >
            
            <EditText
	            android:id="@+id/etCreateExerciseCountdown"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:hint="@string/exerciseCountdown"
	            android:inputType="number" >
        	</EditText>
        	
            <Spinner
	            android:id="@+id/spnCreateExerciseCountdown"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:prompt="@string/exerciseCountdown" />
            
        </LinearLayout>
        
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/llCreateExerciseSets"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tvcreateExerciseSets"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sets" />

            <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/llAddRemoveSets"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btnCreateExerciseAddSet"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:text="@string/plus" />

                <Button
                    android:id="@+id/btnCreateExerciseRemoveSet"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:text="@string/minus" />

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnCreateExerciseDone"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/done" />

    </LinearLayout>

</ScrollView>