<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svViewCustomGoal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:id="@+id/llViewCustomGoal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exGoalName" />
        
        <TextView
            android:id="@+id/tvCustomGoalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="22sp"
            android:text="textView" />
        
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description" />
        
        <TextView
            android:id="@+id/tvCustomGoalDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="18sp"
            android:text="textView" />
        
        <LinearLayout
        	android:id="@+id/linearLayout1"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
        	
            <Button
                android:id="@+id/btnCustomGoalCompleted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".43"
                android:layout_marginRight="30dp"
                android:text="@string/completed" />
            
            <Button
            	android:id="@+id/btnCustomGoalDelete"
            	android:layout_width="wrap_content"
            	android:layout_height="wrap_content"
            	android:layout_weight=".57"
            	android:text="@string/delete" />
        	
        </LinearLayout>
        
    </LinearLayout>
</ScrollView>