<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svExerciseAnalytics"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <LinearLayout
        android:id="@+id/llExerciseAnalytics"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RadioGroup
            android:id="@+id/rgSetAnalytics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone" >

            <RadioButton
                android:id="@+id/rbSetAnalyticsAllWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/weightOverTime" />

            <RadioButton
                android:id="@+id/rbSetAnalyticsRepBased"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repSpecific" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/llSetAnalyticsRepBased"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" >

            <EditText
                android:id="@+id/etSetAnalyticsReps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/reps"
                android:inputType="number" />

            <Button
                android:id="@+id/btnSetAnalyticsGenerate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/generate" />

        </LinearLayout>
        
        <WebView
            android:id="@+id/wvExerciseAnalytics"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        
        <WebView
            android:id="@+id/wv2ExerciseAnalytics"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />
        
    </LinearLayout>
</ScrollView>